# zfs2s3

./: .justfile  CHANGELOG.md  Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  s3.rs  zfs.rs
tests/: integration-tests  s3_doc.md  setup_s3  setup_zfs  zfs_doc.md  zfs_volume
