[package]
name = "zfs2s3"
version = "0.1.0"
edition = "2024"

[dependencies]
object_store = { version = "0.12", features = ["aws"] }
tokio = { version = "1.48", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "signal"] }
chrono = "0.4.42"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
cron = "0.15"
humantime = "2.3"
clap = { version = "4.5", features = ["derive", "env"] }
fast-glob = "1.0.0"
log = "0.4"
futures = "0.3"
tokio-util = "0.7"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = true
debug = false
